--- a/src/components/Info/info.css
+++ b/src/components/Info/info.css
@@ -1,12 +1,12 @@
 .info {
-    height: 50vh;
     width: clamp(12.5rem, -1.136rem + 68.18vw, 50rem);
     color: #eccf90cc;
     text-align: center;
     font-size: clamp(1.125rem, 0.852rem + 1.36vw, 1.875rem);
-    margin-top: 200px;
+    margin-top: 5%;
     padding-left: 13%;
-    padding-top: 10%;
+    padding-top: 0;
+    margin-bottom: 0;
     
 }
 
@@ -14,6 +14,8 @@
     .info {
         padding-top: 0;
         padding-left: 15%;
+        margin-top: 40%;
+        margin-bottom: 0;
     }
 }
 
