--- a/src/components/Astro/astro.css
+++ b/src/components/Astro/astro.css
@@ -10,14 +10,15 @@
 
 .column {
     width: clamp(300px,25%,300px);
-    height:clamp(clamp(12.5rem, 7.955rem + 22.73vw, 25rem));
+    height:clamp(9.375rem, -3.125rem + 62.5vw, 43.75rem);
     text-align: center;
     color: wheat;
-    margin-top: 20px;
+    margin-top: 0;
     border: 2px solid rgba(255, 215, 0, 0.5);
     border-radius: 10px;
     background-image: linear-gradient(rgba(140, 114, 57, 0.8), rgba(0, 0, 0, 0.8));
-    padding: 20px;
+    padding: 30px 20px 50px 20px;
+
     font-size: clamp(1rem, 0.795rem + 1.02vw, 1.563rem);
     line-height: 1.6;
     transition: transform 0.7s, background-color 0.7s;
@@ -40,8 +41,8 @@
   
   transition: opacity 0.5s ease-in-out;
     position: absolute;
-    bottom: -70%;
-    left: calc(50%-200px); 
+    bottom: -110%;
+    left: 30%; 
 
     display: block;
     width: 350px;
@@ -66,7 +67,7 @@
 
 @media screen and (max-width: 768px) {
   .about_astrology {
-      height: auto;
+      height: 800px;
       flex-direction: column;
       align-items: center;
       padding-top: 0;
@@ -75,13 +76,16 @@
   .column {
       width: 90%;
       margin-top: 20px;
+      padding-bottom: 30px;
   }
 
   .btn_astro {
       width: 50%;
-      margin-top: 100%;
-      margin-left: 17%;
-      top: 160%;
+      bottom: -85%;
+      margin-top:0;
+      left: 20%;
+      margin-right: 0;
+     
 }
 
 }
